Adição de comentários e correção de detalhes

--- a/public_html/ArquivosHTML/index.html
+++ b/public_html/ArquivosHTML/index.html
@@ -23,7 +23,11 @@
     </div>
     </fieldset>
 
-    <form action="telaLogin.html">  <!-- aqui também precisa colocar metodo, mas ao colocar como "post" dá erro na execução e na URL -->
+    <form action="telaLogin.html" >  <!-- method="post"
+        
+                                     
+                                    aqui também precisa colocar metodo, 
+                                    mas ao colocar como "post" dá erro na execução e na URL -->
       <fieldset class="grupo">
 
         <div class="campo"> 
